test/bad/arrays/comprehension09.px

[c for (a, b), c in [("d", true)]]
